fix(UI): align started text (#1037)

--- a/src/stylesheets/ButtonLink.css
+++ b/src/stylesheets/ButtonLink.css
@@ -7,6 +7,7 @@
   /*i named it btn--link because bootstrap has already btn-link class*/
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
   text-decoration: none;
   border-style: solid;
